--- a/index.css
+++ b/index.css
@@ -10,6 +10,13 @@ html {
   font-style: normal;
 }
 
+button {
+  font-family: "SN Pro", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
   background-color: rgb(255, 233, 239);
 }
@@ -30,5 +37,64 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
-  align-items: center;  
+  align-items: center;
+}
+
+#hint-button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: rgb(255, 105, 180);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#gift-title {
+  margin-bottom: 20px;
+}
+
+#hint-container {
+  margin-top: 20px;
+}
+
+#hint-penalty {
+  color: rgb(255, 0, 0);
+  margin-top: 10px;
+}
+
+.nav-buttons {
+  display: flex;
+  gap: 10px;
+  margin-top: 20px;
+}
+
+.nav-button, #start-button {
+  padding: 10px 20px;
+  background-color: rgb(255, 105, 180);
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#welcome-screen {
+  display: flex;
+  flex-direction: column;
+}
+
+#start-button {
+ /* justify-self: center; */
+ align-self: center;
+}
+
+.nav-button:disabled {
+  background-color: rgb(255, 182, 193);
+  cursor: not-allowed;
+}
+
+#game-container {
+  display: none;
+  flex-direction: column;
+  align-items: center;
 }
