--- a/index.css
+++ b/index.css
@@ -40,11 +40,11 @@ body {
   align-items: center;
 }
 
- .main-title {
+.main-title {
   font-size: 30px;
   font-weight: 600;
   margin-bottom: 10px;
- }
+}
 
 #hint-button {
   margin-top: 20px;
@@ -77,7 +77,8 @@ body {
   margin-top: 20px;
 }
 
-.nav-button, #start-button {
+.nav-button,
+#start-button {
   padding: 10px 20px;
   background-color: rgb(255, 105, 180);
   color: white;
@@ -92,8 +93,8 @@ body {
 }
 
 #start-button {
- /* justify-self: center; */
- align-self: center;
+  /* justify-self: center; */
+  align-self: center;
 }
 
 .nav-button:disabled {
